[package]
name = "password_vault"
authors = ["Topster_"]
license = "Unlicense"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "build.rs"
[dependencies]
#clearscreen = "1.0.10"
magic-crypt = "3.1.10"
serde_json = {version="1.0.82",features=["preserve_order"]}
colored = "2.0.0"
passwords = "3.1.9"
clipboard = "0.5.0"
winapi = {version="0.3.9",features=["errhandlingapi"]}
crossterm = "0.24.0"
inquire = "0.3.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"